REGRESSION (r280492): Clicking backspace on sign in fields results in deleting two characters instead of one. https://bugs.webkit.org/show_bug.cgi?id=228802

Patch by Dana Estra <destra@apple.com> on 2021-08-04
Reviewed by Tim Horton.

No tests yet.

* page/EventHandler.cpp:
(WebCore::EventHandler::defaultKeyboardEventHandler):

Canonical link: https://commits.webkit.org/240276@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@280671 268f45cc-cd09-0410-ab3c-d52691b4dbfc